init goth
